Code rework: API rewritten and optimized Only the graphical editor is missing to finish the mod